syntax = "proto3";

option go_package = "./api/im_balance/v1;v1";
package im_balance.api.v1;

service HeartBeatService {
  rpc Ping(PingReq) returns (PingResp) {}
}

message PingReq {
  string service_name = 1;
  string ip = 2;
}

message PingResp {
  int32 code = 1;
}